--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -73,6 +73,12 @@
                             </select>
                         </div>
                     </div>
+                    <div class="form-group row pr-3 bugs-options{{i}}">
+                        <label for="numOfBugs{{i}}" class="col col-form-label">Number of Bugs</label>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="numOfBugs{{i}}" value="1" required>
+                        </div>
+                    </div>
 
                     <div class="form-group row pr-3 blank-options{{i}}">
                         <label for="blankRecSelect{{i}}" class="col col-form-label">Recording Type</label>
