--- a/Arena/templates/management/schedule_modal.html
+++ b/Arena/templates/management/schedule_modal.html
@@ -75,8 +75,8 @@
             <div class="col-sm-7">
                 <label for="agentStateSelectSchedule" class="col-form-label">Agent State</label>
                 <select id="agentStateSelectSchedule" class="form-control">
-                    <option value="1">ON</option>
-                    <option value="0">OFF</option>
+                    <option value="on">ON</option>
+                    <option value="off">OFF</option>
                 </select>
             </div>
         </div>
@@ -124,7 +124,7 @@
         if (scheduleType === 'switch') {
             experimentName = `SWITCH:${$("#switchNameSelectSchedule").val()},${$("#switchStateSelectSchedule").val()}`
         } else if (scheduleType === 'agent') {
-            experimentName = `AGENT:${$("#agentStateSelectSchedule").val()}}`
+            experimentName = `AGENT:${$("#agentStateSelectSchedule").val()}`
         }
         $.post('/commit_schedule', {
                 start_date: $("#datetimepicker1").data().date,
