--- a/Arena/templates/block_analysis.html
+++ b/Arena/templates/block_analysis.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Block {{ block_id }} Analysis</h1>
+    <h5>{{ block_path }}</h5>
     <div style="margin-bottom: 2em;">
         <label for="blockTags">Tags:</label>
         <input id="blockTags" value="{{ tags }}" type="text" autocomplete="off">
