--- a/Arena/templates/management/animal_id.html
+++ b/Arena/templates/management/animal_id.html
@@ -1,4 +1,5 @@
 <div class="row pl-3 pr-3 form-group">
+    {% include "management/animal_summary.html" %}
     <div class="col-sm-3" style="padding: 1%;">
         <label for="animalId" class="col-form-label" style="white-space: nowrap">Animal ID</label>
         <input type="text" class="form-control" id="animalId">
@@ -12,14 +13,13 @@
         </select>
     </div>
     <div class="col-sm-2" style="padding: 1%;">
-        <label for="updateAnimalId" class="col-form-label" style="height: 45%"></label>
-        <button id="updateAnimalId" type="button" class="btn btn-sm btn-outline-info">Update</button>
+        <button id="updateAnimalId" type="button" class="btn btn-sm btn-outline-info" style="bottom: 0.5em;position: absolute;">Update</button>
     </div>
 
-    <div class="col" style="margin-left: 0.5em;">
-        <label for="openAnimalSettings" class="col-form-label" style="height: 75%"></label>
-        <button id="openAnimalSettings" type="button" class="btn btn-sm btn-outline-info">Animal Settings</button>
+    <div class="col">
+        <button id="animalSummary" type="button" class="btn btn-sm btn-primary mx-auto" style="bottom: 0.5em;position: absolute;">Animal Summary</button>
     </div>
+
 </div>
 
 {% for feeder in feeders %}
@@ -64,96 +64,33 @@
     </div>
 </div>
 
-<div class="modal fade" id="animalSettingsModal" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>Animal Settings</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form>
-                <div class="modal-body">
-
-                    <div class="form-group row pr-3" id="exitHolePosition">
-                        <label for="exitHolePositionSelect" class="col col-form-label">Exit Hole Position</label>
-                        <div class="col">
-                            <select id="exitHolePositionSelect" class="form-control col">
-                                {% for val, label in config.get('holePositions', {}).items() %}
-                                <option value="{{val}}">{{label}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pr-3">
-                        <label for="rewardAnyTouchProb" class="col col-form-label">Any Touch Reward Probability</label>
-                        <div class="col-sm-5">
-                            <input type="number" step=0.01 max=1 min=0 class="form-control" id="rewardAnyTouchProb" value="0" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pr-3">
-                        <label for="bugTypeSelect" class="col col-form-label">Bug Types</label>
-                        <div class="col">
-                            <select id="bugTypeSelect" class="form-control" multiple="multiple" style="display: none;">
-                                {% for bugType in config.get('bugTypes', {}).keys() %}
-                                <option value="{{bugType}}">{{bugType}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pr-3" id="rewardBugDiv">
-                        <label for="rewardBugSelect" class="col col-form-label">Reward Bug</label>
-                        <div class="col">
-                            <select id="rewardBugSelect" class="form-control col" multiple="multiple"
-                                    style="display: none;">
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pr-3" id="backgroundColorDiv">
-                        <label for="backgroundColor" class="col col-form-label">Background Color</label>
-                        <div class="col-sm-5">
-                            <input type="color" class="form-control" id="backgroundColor" value="#e8eaf6">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col">
-                            <button id="updateAnimalSettings" type="button"
-                                    class="btn btn-sm btn-outline-info float-right">Update</button>
-                        </div>
-                    </div>
-
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
 <script>
-    {% for feeder in feeders %}
-        {#$("#rewardCountInput-{{ feeder | replace(" ", "-") }}").val('')  // initiate the reward value#}
-        $("#updateRewardCount-{{ feeder | replace(" ", "-") }}").click(() => {
-            console.log('update feeder')
-            $.ajax({
-                url: "/update_reward_count",
-                type: "POST",
-                data: JSON.stringify({
-                    'reward_count': $("#rewardCountInput-{{ feeder | replace(" ", "-") }}").val(),
-                    'name': "{{ feeder }}"
-                }),
-                contentType: "application/json",
-                error: function (data) {
-                    console.log(data.responseText)
-                }
-            })
+    const feedersNames = JSON.parse("{{ feeders|tojson }}")
+    for (let feeder of feedersNames) {
+      let feederLabel = feeder.replace(" ", "-")
+      $(`#updateRewardCount-${feederLabel}`).click(() => {
+        let newFeederCount = $(`#rewardCountInput-${feederLabel}`).val()
+        console.log(`Feeder ${feederLabel} count was updated to ${newFeederCount}`)
+        $.ajax({
+            url: "/update_reward_count",
+            type: "POST",
+            data: JSON.stringify({
+                'reward_count': newFeederCount,
+                'name': feeder
+            }),
+            contentType: "application/json",
+            error: function (data) {
+                console.log(data.responseText)
+            }
         })
-    {% endfor %}
+      })
+    }
+
+    $("#animalSummary").click(function (e) {
+        $("#animalIdsForSummarySelect").val($("#animalIdsForSummarySelect option:first").val()).trigger('change')
+        $("#updateAnimalSummary").click()
+        $('#animalSummaryModal').modal('toggle')
+    })
 
     $("#updateAnimalId").click(() => {
         $("#validateAnimalModal").modal('toggle');
@@ -176,12 +113,4 @@
         $("#validateAnimalModal").modal('toggle');
     })
 
-    $("#openAnimalSettings").click(() => {
-        $("#animalSettingsModal").modal('toggle');
-    })
-
-    $("#updateAnimalSettings").click(() => {
-        updateAnimalId()
-        $("#animalSettingsModal").modal('toggle');
-    })
 </script>
