--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -109,6 +109,54 @@
                         </div>
                     </div >
 
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="exitHolePosition{{i}}">
+                        <label for="exitHolePositionSelect{{i}}" class="col col-form-label">Exit Hole Position</label>
+                        <div class="col">
+                            <select id="exitHolePositionSelect{{i}}" class="form-control col">
+                                {% for val, label in config.get('holePositions', {}).items() %}
+                                <option value="{{val}}">{{label}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}">
+                        <label for="bugTypeSelect{{i}}" class="col col-form-label">Bug Types</label>
+                        <div class="col">
+                            <select id="bugTypeSelect{{i}}" class="form-control" multiple="multiple" style="display: none;">
+                                {% for bugType in config.get('bugTypes', {}).keys() %}
+                                    <option value="{{bugType}}">{{bugType}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="rewardBugDiv">
+                        <label for="rewardBugSelect{{i}}" class="col col-form-label">Reward Bug</label>
+                        <div class="col">
+                            <select id="rewardBugSelect{{i}}" class="form-control col" multiple="multiple"
+                                    style="display: none;">
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="accelerateMultiplierDiv{{i}}" style="display: none;">
+                        <div class="col col-form-label">
+                            <label for="accelerateMultiplier{{i}}" style="margin-bottom: 0">Accelerate Multiplier:</label>
+                            <div style="font-size: small">times the velocity is multiplied</div>
+                        </div>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="accelerateMultiplier{{i}}" min="0" value="3">
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}">
+                        <label for="rewardAnyTouchProb{{i}}" class="col col-form-label">Any Touch Reward Probability</label>
+                        <div class="col-sm-5">
+                            <input type="number" step=0.01 max=1 min=0 class="form-control" id="rewardAnyTouchProb{{i}}" value="0" required>
+                        </div>
+                    </div>
+
                     <div class="row ml-4 mt-3 form-group row pr-3 bugs-options{{i}}">
                         <input class="form-check-input" type="checkbox" id="isDefaultBugSize{{i}}" checked>
                         <label class="form-check-label" for="isDefaultBugSize{{i}}">Use Default Bug Sizes</label>
@@ -170,6 +218,13 @@
                                 <option value="{{psychoFile}}">{{psychoFile}}</option>
                                 {% endfor %}
                             </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="backgroundColorDiv{{i}}">
+                        <label for="backgroundColor{{i}}" class="col col-form-label">Background Color</label>
+                        <div class="col-sm-5">
+                            <input type="color" class="form-control" id="backgroundColor{{i}}" value="#e8eaf6">
                         </div>
                     </div>
 
