--- a/Arena/templates/management/predictions.html
+++ b/Arena/templates/management/predictions.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="undistortForm">
+                <form id="predictionsForm">
                     
                     <div class="col mb-3">
                         <label class="form-check-label" for="pred-name">Predictor Name</label>
