--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -199,6 +199,9 @@
         let animalSettingsValues = AnimalIDFields.values
         let payload = {
             numOfBugs: blockValues.num_of_bugs,
+            isSplitBugsView: blockValues.is_split_bugs_view,
+            randomizeTiming: blockValues.randomize_timing,
+            repeatedSplitPosRatio: blockValues.repeated_split_pos_ratio,
             numTrials: blockValues.num_trials,
             iti: blockValues.iti,
             trialDuration: blockValues.trial_duration,
