fix split-view for experiment

--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -94,13 +94,13 @@
                              The other bug will enter with a random delay from the first bug
                         </div>
                     </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}" id="holesHeightDiv{{i}}" style="display: none;">
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="splitRepeatedPosRatioDiv{{i}}" style="display: none;">
                         <div class="col col-form-label">
-                            <label for="holesHeight{{i}}" style="margin-bottom: 0">Repeated Bug Position Ratio:</label>
+                            <label for="splitRepeatedPosRatio{{i}}" style="margin-bottom: 0">Repeated Bug Position Ratio:</label>
                             <div style="font-size: small">0-all trails' position are randomized, <br/> 1-all trials have same position</div>
                         </div>
                         <div class="col-sm-5">
-                            <input type="number" class="form-control" id="holesHeight{{i}}" step=0.25 min="0" max="1" value="1">
+                            <input type="number" class="form-control" id="splitRepeatedPosRatio{{i}}" step=0.25 min="0" max="1" value="1">
                         </div>
                     </div>
                     </div>
