--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -246,6 +246,16 @@
                         </div>
                     </div>
 
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="feederDelayDiv{{i}}" style="display: none;">
+                        <div class="col col-form-label">
+                            <label for="feederDelay{{i}}" style="margin-bottom: 0">Feeder Delay:</label>
+                            <div style="font-size: small">Delay in seconds for feeder activation</div>
+                        </div>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="feederDelay{{i}}" min="0" value="0">
+                        </div>
+                    </div>
+
                     <div class="form-group row pr-3 bugs-options{{i}}" id="backgroundColorDiv{{i}}">
                         <label for="backgroundColor{{i}}" class="col col-form-label">Background Color</label>
                         <div class="col-sm-5">
