split view for one bug enabled

--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -508,6 +508,10 @@
               let numOfBugs = Number($numOfBugs.val());
               if (numOfBugs === 1) {
                   $(`#multipleBugsConf${i}`).hide();
+                  if ($(`#movementTypeSelect${i}`).val() === 'circle') {
+                    $(`#multipleBugsConf${i}`).show();
+                    $(`#splitRandomizeTimingDiv${i}`).hide();
+                  }
               } else {
                   $(`#multipleBugsConf${i}`).show();
               }
